    * IMPORTANT: Ctrl-c/x/v/z do their expected thing now. We managed that by just
      reshuffling some commands.
    * IMPORTANT: CARET mode is now activated with 'c' instead of 'i'
    * IMPORTANT: :viusage, :exusage and :optionusage (and the manually created
      index of all commands in the helpfile) have been replaced by a single
      :usage command.
    * Error messages have more consistent wording now, also got rid of Exxx error
      codes, as we never supported those in the help files anyway.
    * Vimperator works around Firefox's tab scrolling now. So the minimum
      tab width is now just 16px anymore, and you are much more unlikely to
      see scrollbars in the tab bar.
    * No longer show the command after executing an ex command. Just
      fade out quickly now and make room for the status items.
    * Add 'apptab' option for pin/unpin the current tab.
    * Add 'messagetimeout' option to automatically hide messages after a timeout
    * :tabclose! behavior is changed: Instead of focusing left tab, force closing
      of a tab - even if it is an AppTab.
    * Bug fixes

2011-03-06:
    * version 3.0
    * IMPORTANT: The statusbar and command line have been merged in a single
      row as also Firefox 4 hides the statusbar by default now
    * IMPORTANT: By default, we don't change Firefox's default UI anymore!
      This was done since Firefox 4 has indeed a very minimal GUI and the Firefox
      navigation toolbar (with small icons) uses hardly more space than our old status line, but
      provides so much more (easy bookmarking, better security information, ...)
    * IMPORTANT: 'guioptions' and 'showtabline' have been removed in favor of
      'toolbars', 'scrollbars' and 'tabnumbers' options!
    * IMPORTANT: Removed 'laststatus' option but add a 'status' option in contrast
      to decide which elements are shown in the new style status bar
    * IMPORTANT: Support for configurable hint characters; This basically brings back the old